[gd_scene load_steps=2 format=3 uid="uid://bgvwk1wegb2wh"]

[ext_resource type="Script" uid="uid://b6glehh6amf5a" path="res://Assets/scripts/main_menu.gd" id="1_u77p3"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u77p3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -68.0
offset_right = 57.5
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayGameButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "PLAY GAME"

[node name="LevelEditButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "LEVEL EDITOR"

[node name="SettingsButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "SETTINGS"

[node name="ExitButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "EXIT"
